under3F/under3f.css
.contant{
      background-color:#E8E8E8;
      width: 1000px;
      height: 1000px;
      display: flex;
      justify-content:center;
      align-items:center;
}
.caculator{
      width: 350px;
      height: 525px;
      margin: auto;
      background-color: #072245;
}
.header{
      width: 350px;
      height: 109px;
      background-color:#031A36;
      border-radius: 20px 20px 0 0;
     
}
.header p{
      color: #e8e8e8;
      z-index: 1;
      box-sizing: border-box;
      display: flex;
      justify-content:flex-end;
      align-items:flex-end;
      margin: 0;
      position: relative;
      font: Roboto;
   
}
.header .process{
      top: 16px;
      right: 15px;
      font-size: 16px;
      color: #01B9F2;
}

.header .result{
      top: 17px;
      height: 66px;
      line-height: 66px;
      font-size: 56px;
}

.body{
      width: 350px;
      height: 416px;
      background-color:#072245;
      border-radius: 0 0 20px 20px;
      display: flex;
      justify-content:flex-start;
      position: relative;
      flex-wrap:wrap-reverse;
      justify-content:flex-end;
}
.body p{
   
      width: 71px;
      height: 64px;
      margin: 0;
      z-index: 1;
      box-sizing: border-box;
      color:#e8e8e8;
      padding: 18px 27px;
      background-color:#072245;
      border-radius: 16px;
      display: inline-block;
      margin:8px 8px;
      font-size: 24px;
   
}
p.fun{
      background-color:#031A36;
  
}
p.equ{
      width: 155px;
      background:linear-gradient(90deg,#00C4FF,#6C00FF);
      background-repeat:no-repeat;
      display: flex;
      justify-content:flex-end;
}
p.acDe{
      color: #00C4FF;
}

